<resources>
    <string name="app_name">Life</string>

    <!-- Titles -->
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_creation">New</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="title_fragment_creation">New Reminder</string>
    <string name="title_fragment_login">Welcome Back</string>
    <string name="title_fragment_register">Welcome</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_level_physical">Biological and Physiological</string>
    <string name="nav_level_safety">Safety and Stability</string>
    <string name="nav_level_social">Love and Belongingness</string>
    <string name="nav_level_esteem">Esteem</string>
    <string name="nav_level_cognitive">Cognitive</string>
    <string name="nav_level_aesthetic">Aesthetic</string>
    <string name="nav_level_actualization">Self-Actualization</string>
    <string name="nav_level_transcendence">Transcendence</string>

    <string name="nav_home">Home</string>
    <string name="nav_sleep">Sleep</string>
    <string name="nav_fitness">Fitness</string>
    <string name="nav_nutrition">Nutrition</string>

    <!-- Menus -->
    <string name="action_info">Info</string>
    <string name="action_settings">@string/title_activity_settings</string>
    <string name="action_new">@string/title_activity_creation</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_about">About</string>

    <!-- Dialog -->
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="dialog_info_title">Info</string>

    <!-- Main -->
    <string name="info_stream">See a list of all remaining tasks.</string>

    <!-- Stream -->
    <string name="empty_reminders">There aren\'t any reminders</string>
    <string name="error_loading_reminders">There was a problem loading the reminders</string>

    <!-- Settings -->
    <string name="preferences_category_one">Category 1</string>
    <string name="preferences_category_two">Category 2</string>

    <string name="preferences_switch_title">Switch Preference</string>
    <string name="preferences_switch_summ">Switch Summary</string>

    <string name="preferences_edittext_title">EditText Preference</string>
    <string name="preferences_edittext_summ">EditText Summary</string>
    <string name="preferences_edittext_default">Default value</string>
    <string name="preferences_edittext_message">Dialog Message</string>

    <string name="preferences_time_title">Time Preference</string>
    <string name="preferences_time_summ">Time Summary</string>

    <string name="preferences_checkbox_title">CheckBox Preference</string>
    <string name="preferences_checkbox_summ">CheckBox Summary</string>

    <!-- Creation -->
    <string name="info_creation">Create tasks that need to be done, and we\'ll remind you when to do them.</string>
    <string name="calendar_date_picker_result_values">Year: %1$d\\nMonth: %2$d\\nDay: %3$d</string>
    <string name="radial_time_picker_result_value">%1$d:%2$d</string>

    <!-- Login -->
    <string name="tab_login">Log In</string>
    <string name="tab_register">Register</string>
    <string name="info_login">Welcome back! Use your details to restore all your data and settings, just as you left it.</string>
    <string name="info_register">Login to enjoy features like backup, multi device sync, etc.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- About -->
    <string name="info_about">Info about the development of the application and its developers.</string>
    <string name="tab_about">About</string>
    <string name="tab_libraries">Libraries</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
